fix not sticky navigation bar on mobile #3570

--- a/Resources/public/css/layout.css
+++ b/Resources/public/css/layout.css
@@ -370,7 +370,26 @@ body.fixed .content-header .navbar.stuck {
 }
 
 @media(max-width:768px) {
+    body.fixed .main-header {
+        position: relative;
+    }
+    body.fixed .content-wrapper,
+    body.fixed .right-side {
+        padding-top: 0;
+    }
     body.fixed .content-header .navbar.stuck {
-        top:100px;
+        top: 0;
+        position: relative;
+        margin: 0;
+        width: 100%;
+    }
+    body.fixed .main-sidebar {
+        position: absolute;
+    }
+    /* disable slimScroll */
+    body.fixed .main-sidebar .slimScrollDiv,
+    body.fixed .main-sidebar .sidebar {
+        overflow: visible !important;
+        height: auto !important;
     }
 }
